support Java 21 bugfix